# hindsight-local-memory

./: .coverage  .env.example  .gitignore  DAILY_CHECKPOINT.md  Makefile  README.md  coverage.xml  pyproject.toml
agents/: hindsight-memory-agent.md
config/: config-manifest.json
docs/: CODE_ATLAS.md  DEPLOYMENT.md  MAKEFILE.md  QUICKSTART-DEVELOPER.md  TESTING_PLAN.md  local-schema.md  sync-design.md
docs/diagrams/: falkordb-lite-flow.mmd  sqlite-flow.mmd  sqlite-vec-falkordb-flow.mmd  sqlite-vec-flow.mmd
examples/: basic_ingest.py
scripts/: config-manager  configure-env.sh  graph_add_entry.py  graph_regenerate.py  init_db.py  vector_add_entry.py  vector_regenerate.py
skills/hindsight-memory/: SKILL.md
src/hindsight_local/: __init__.py  cli.py  ids.py  models.py
src/hindsight_local/agent/: memory_agent.py
src/hindsight_local/graph/: falkordb_projection.py
src/hindsight_local/storage/: sqlite_store.py  vector_store.py
src/hindsight_local/sync/: bundles.py  events.py
tests/: test_ids.py  test_store.py
