[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hindsight-local-memory"
version = "0.1.0"
description = "Local-first Hindsight memory node using SQLite, optional sqlite-vec, and optional FalkorDB Lite."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Calvin" }]
dependencies = []

[project.optional-dependencies]
dev = ["build>=1", "mypy>=1.10", "pytest>=8", "pytest-cov>=5", "ruff>=0.5"]
embeddings = ["numpy>=1.26"]
falkordb = ["falkordb>=1.0"]

[project.scripts]
hindsight = "hindsight_local.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
